tests/ui/async-await/async-closures/wrong-fn-kind.stderr
error[E0277]: the trait `AsyncFn<()>` is not implemented for `{async closure@$DIR/wrong-fn-kind.rs:9:20: 9:28}`
  --> $DIR/wrong-fn-kind.rs:9:20
   |
LL |       needs_async_fn(async || {
   |  _____--------------_^
   | |     |
   | |     required by a bound introduced by this call
LL | |
LL | |         x += 1;
LL | |     });
   | |_____^ the trait `AsyncFn<()>` is not implemented for `{async closure@$DIR/wrong-fn-kind.rs:9:20: 9:28}`
   |
note: required by a bound in `needs_async_fn`
  --> $DIR/wrong-fn-kind.rs:6:31
   |
LL |     fn needs_async_fn(_: impl async Fn()) {}
   |                               ^^^^^^^^^^ required by this bound in `needs_async_fn`

error[E0277]: the trait `AsyncFn<()>` is not implemented for `{closure@$DIR/wrong-fn-kind.rs:15:20: 15:27}`
  --> $DIR/wrong-fn-kind.rs:15:20
   |
LL |       needs_async_fn(move || async move {
   |  _____--------------_^
   | |     |
   | |     required by a bound introduced by this call
LL | |
LL | |         println!("{x}");
LL | |     });
   | |_____^ the trait `AsyncFn<()>` is not implemented for closure `{closure@$DIR/wrong-fn-kind.rs:15:20: 15:27}`
   |
note: required by a bound in `needs_async_fn`
  --> $DIR/wrong-fn-kind.rs:6:31
   |
LL |     fn needs_async_fn(_: impl async Fn()) {}
   |                               ^^^^^^^^^^ required by this bound in `needs_async_fn`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
